objects/Royalty_Range__c.object
<CustomObject>
    <label>Royalty Range</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Royalty Range ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Royalty Range</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Royalty__c</fullName>
        <label>Royalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Low_Quantity__c</fullName>
        <label>Low Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Quantity__c</fullName>
        <label>High Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>